[gd_scene load_steps=4 format=3 uid="uid://dvaws6v1mrd76"]

[ext_resource type="Script" uid="uid://bx2fqcrpai0ud" path="res://src/scripts/skill_tree_button_base.gd" id="1_1mpqi"]
[ext_resource type="Texture2D" uid="uid://dovkapi7yoarm" path="res://assets/visuals/upgrade.png" id="2_x3jif"]
[ext_resource type="PackedScene" uid="uid://23tkt68f45bd" path="res://src/scenes/composables/button_animation_wrapper_container.tscn" id="3_x3jif"]

[node name="SkillTreeButtonBase" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = -18.0
offset_right = 21.0
offset_bottom = 22.0
script = ExtResource("1_1mpqi")

[node name="ConnectionToParent" type="Line2D" parent="."]
top_level = true
z_index = -1
width = 3.0
default_color = Color(0.151276, 0.151276, 0.151276, 1)

[node name="WrapperButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Visuals" type="Control" parent="WrapperButton"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(20, 20)
mouse_filter = 2

[node name="Button" type="TextureRect" parent="WrapperButton/Visuals"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_x3jif")
stretch_mode = 5

[node name="ButtonAnimationWrapperContainer" parent="WrapperButton" instance=ExtResource("3_x3jif")]
